[project]
name = "nba_data"
version = "0.1.0"
dependencies = [
    "pendulum~=3.0.0",
    "duckdb~=1.2.0",
    "polars~=1.22.0",
    "toml~=0.10.2",
    "nba_api~=1.7.0",
    "ruff>=0.9.6",
]

[project.optional-dependencies]
streamlit = [
    "streamlit~=1.42.0",
    "duckdb~=1.2.0",
    "toml~=0.10.2",
    "polars~=1.22.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
